add last-number-cyberlinked to config

--- a/kickstart/settings-variants.yaml
+++ b/kickstart/settings-variants.yaml
@@ -101,3 +101,9 @@ ipfs-upload-with-no-confirm:
   variants:
   - true
   - false
+last-number-cyberlinked:
+  description: the last number for a neuron cyberlinked using `link-number`
+  type: int
+  variants:
+  - -1
+  - other
